[package]
name = "stunner_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.7", features = ["derive"] }
pnet = "0.28.0"
stun-coder = "1.1.2"

[features]
