[package]
name = "stunner_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.10", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.14"
# stun-coder = "1.1.2"
stun-coder = { path = "../../rust-stun-coder" }
tokio = { version = "1.15.0", features = ["full"] }
